# jedeschule-scraper

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  check_difference.sh  create_db.py  crontab  normalize.py  pyproject.toml  requirements.txt  run.py  run.sh  scrape_all.sh  scrapinghub.yml  scrapy.cfg  setup.py  test.sh  test_changes.py  test_changes.sh  test_models.py
.github/: dependabot.yml
.github/workflows/: deploy.yml  test.yml  test_scraper_changes.yml
alembic/: env.py
alembic/versions/: 7debef0e3f50_create_initial_school_table.py  8e4921f60766_add_last_update_timestamp.py  b3913e0b45ac_add_location_to_school.py  e6c0d3f4a5b6_add_state_key_to_schools.py
berlin/: leitbild_matcher.js  package.json
jedeschule/: fallback_school_id.py  items.py  pipelines.py  settings.py  utils.py  wfs_basic_parsers.py
jedeschule/old/: jugendforscht.py  klimaschutzschulenatlas.py  schule-gegen-rassisum.py
jedeschule/pipelines/: __init__.py  db_pipeline.py  jsonpipeline.py  school_pipeline.py
jedeschule/spiders/: baden_wuerttemberg.py  baden_württemberg.py  bayern.py  bayern2.py  berlin.py  brandenburg.py  bremen.py  hamburg.py  hessen.py  jugendforscht.py  klimaschutzschulenatlas.py  mecklenburg_vorpommern.py  niedersachsen.py  niedersachsen_helper.py  nrw.py  (+10 more)
niedersachsen/: items.py  pipelines.py  settings.py
test/: test_bayern.py  test_berlin.py  test_brandenburg.py  test_bremen.py  test_fallback_school_id.py  test_hamburg.py  test_mecklenburg_vorpommern.py  test_niedersachsen.py  test_rheinlandpfalz.py  test_saarland.py
(+4 files in other folders)
