[project]
name = "jedeschule-scraper"
version = "0.1.0"
description = "Web scrapers for the jedeschule.codefor.de project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.17.1",
    "geoalchemy2==0.18.0",
    "openpyxl>=3.1.5",
    "psycopg2==2.9.11",
    "pyproj==3.7.2",
    "pyshp>=3.0.2.post1",
    "requests==2.32.5",
    "scrapy==2.13.3",
    "sqlalchemy==2.0.44",
    "xmltodict==1.0.2",
]
