[project]
name = "jedeschule-scraper"
version = "0.1.0"
description = "Web scrapers for the jedeschule.codefor.de project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.0",
    "geoalchemy2==0.18.1",
    "openpyxl>=3.1.5",
    "psycopg2==2.9.11",
    "pyproj==3.7.2",
    "requests==2.32.5",
    "scrapy==2.14.1",
    "sqlalchemy==2.0.45",
    "xmltodict==1.0.2",
]
