[project]
name = "jedeschule-scraper"
version = "0.1.0"
description = "Web scrapers for the jedeschule.codefor.de project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "geoalchemy2==0.20.0",
    "openpyxl>=3.1.5",
    "psycopg2==2.9.12",
    "pyproj==3.7.2",
    "pyshp>=3.0.5",
    "requests==2.34.0",
    "scrapy==2.15.1",
    "sqlalchemy==2.0.49",
    "xmltodict==1.0.4",
]
